--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,21 +16,21 @@
             </div>
             <nav class="nav">
                 <ul>
-                    <li><a href="#" class="optimized">Home</a></li>
-                    <li><a href="#" class="optimized">Favorite</a></li>
-                    <li><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="optimized">About Us</a></li>
+                    <li><a href="#" class="">Home</a></li>
+                    <li><a href="#" class="">Favorite</a></li>
+                    <li><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="">About Us</a></li>
                 </ul>
             </nav>
-            <button class="hamburger__button nav__drawer__btn optimized">☰</button>
+            <button class="hamburger__button nav__drawer__btn " aria-label="hamburger button">☰</button>
         </div>
     </header>
 
     <nav class="drawer">
-        <button class="close__button nav__drawer__btn optimized">X</button>
+        <button class="close__button nav__drawer__btn " aria-label="close drawer button">X</button>
         <ul>
-            <li><a href="/" class="optimized">Home</a></li>
-            <li><a href="#" class="optimized">Favorite</a></li>
-            <li><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="optimized">About Us</a></li>
+            <li><a href="/" class="">Home</a></li>
+            <li><a href="#" class="">Favorite</a></li>
+            <li><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="">About Us</a></li>
         </ul>
     </nav>
 
@@ -42,7 +42,7 @@
             <div class="hero__inner">
                 <h1 class="hero__title">We Are Here to Provide Information About Restaurants!</h1>
                 <p class="hero__tagline">Discover the best restaurant, food, drink & many more!</p>
-                <a href="#restaurant-content" class="hero__anchor optimized">Discover Now</a>
+                <a href="#restaurant-content" class="hero__anchor ">Discover Now</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
     <main>
         <section class="content" id="restaurant-content">
             <div class="article__section">
-                <h1 class="article__section__title">Explore Restaurant</h1>
+                <h2 class="article__section__title">Explore Restaurant</h2>
                 <div class="articles">
 
                 </div>
@@ -59,7 +59,7 @@
 
         <section class="content" id="food-content">
             <div class="article__section">
-                <h1 class="article__section__title">Discover Trending Foods!</h1>
+                <h2 class="article__section__title">Discover Trending Foods!</h2>
                 <div class="articles">
                     <article class="article-item">
                         <img class="article-item__thumbnail" src="./images/foods/food_1.jpg" alt="ramen">
@@ -102,7 +102,7 @@
 
         <section class="content" id="drink_content">
             <div class="article__section">
-                <h1 class="article__section__title">Discover Trending Drinks!</h1>
+                <h2 class="article__section__title">Discover Trending Drinks!</h2>
                 <div class="articles">
                     <article class="article-item">
                         <img class="article-item__thumbnail" src="./images/drinks/drink_1.jpg" alt="oak and bond coffee">
