finishing home page

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,151 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Restaurant Apps Starter Project</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Restaurant Catalogue">
+    <title>Food Hut</title>
 </head>
 
 <body>
-    <a href="#restaurant-content" class="skip-link">Skip to Content</a>
-    <header class="header">
-        <div class="header__inner">
-            <div class="header__title">
-                <span class="first__character__title">Food</span><span class="second__character__title">Hut</span>
-            </div>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#" class="">Home</a></li>
-                    <li><a href="#" class="">Favorite</a></li>
-                    <li><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="">About Us</a></li>
-                </ul>
-            </nav>
-            <button class="hamburger__button nav__drawer__btn " aria-label="hamburger button">☰</button>
-        </div>
-    </header>
-
-    <nav class="drawer">
-        <button class="close__button nav__drawer__btn " aria-label="close drawer button">X</button>
-        <ul>
-            <li><a href="/" class="">Home</a></li>
-            <li><a href="#" class="">Favorite</a></li>
-            <li><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="">About Us</a></li>
-        </ul>
-    </nav>
-
-    <div class="hero">
-        <div class="hero__banner">
-            <div class="hero__image">
-                <img src="./images/heros/hero-image_4.jpg" alt="banner">
-            </div>
-            <div class="hero__inner">
-                <h1 class="hero__title">We Are Here to Provide Information About Restaurants!</h1>
-                <p class="hero__tagline">Discover the best restaurant, food, drink & many more!</p>
-                <a href="#restaurant-content" class="hero__anchor ">Discover Now</a>
-            </div>
-        </div>
-    </div>
-
-    <main>
-        <section class="content" id="restaurant-content">
-            <div class="article__section">
-                <h2 class="article__section__title">Explore Restaurant</h2>
-                <div class="articles">
-
-                </div>
-            </div>
-        </section>
-
-        <section class="content" id="food-content">
-            <div class="article__section">
-                <h2 class="article__section__title">Discover Trending Foods!</h2>
-                <div class="articles">
-                    <article class="article-item">
-                        <img class="article-item__thumbnail" src="./images/foods/food_1.jpg" alt="ramen">
-                        <div class="article-item__content">
-                            <h3 class="article-item__title"><a href="#">Shrimp Ramen</a></h3>
-                            <p class="article-item__description">Best Ramen in Japan!</p>
-                            <div class="article-item__rating">
-                                <img src="./images/icons/ic_star.svg" alt="">
-                                <span>5</span>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="article-item">
-                        <img class="article-item__thumbnail" src="./images/foods/food_2.jpg" alt="sandwich egg">
-                        <div class="article-item__content">
-                            <h3 class="article-item__title"><a href="#">Sandwich Fried Egg</a></h3>
-                            <p class="article-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing
-                                elit. Aenean commodo ligula eget dolor...</p>
-                            <div class="article-item__rating">
-                                <img src="./images/icons/ic_star.svg" alt="">
-                                <span>5</span>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="article-item">
-                        <img class="article-item__thumbnail" src="./images/foods/food_3.jpg" alt="salad">
-                        <div class="article-item__content">
-                            <h3 class="article-item__title"><a href="#">Salad</a></h3>
-                            <p class="article-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing
-                                elit. Aenean commodo ligula eget dolor...</p>
-                            <div class="article-item__rating">
-                                <img src="./images/icons/ic_star.svg" alt="">
-                                <span>5</span>
-                            </div>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-        <section class="content" id="drink_content">
-            <div class="article__section">
-                <h2 class="article__section__title">Discover Trending Drinks!</h2>
-                <div class="articles">
-                    <article class="article-item">
-                        <img class="article-item__thumbnail" src="./images/drinks/drink_1.jpg" alt="oak and bond coffee">
-                        <div class="article-item__content">
-                            <h3 class="article-item__title"><a href="#">Oak and Bond Coffee</a></h3>
-                            <p class="article-item__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium magnam facilis, quisquam nobis, porro temporibus vero iure, voluptate nihil cupiditate aspernatur ducimus quod? Officiis voluptas velit distinctio temporibus sit dolorum?</p>
-                            <div class="article-item__rating">
-                                <img src="./images/icons/ic_star.svg" alt="">
-                                <span>5</span>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="article-item">
-                        <img class="article-item__thumbnail" src="./images/drinks/drink_2.jpg" alt="orange with tomato juice">
-                        <div class="article-item__content">
-                            <h3 class="article-item__title"><a href="#">Orang with Tomato Juice</a></h3>
-                            <p class="article-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing
-                                elit. Aenean commodo ligula eget dolor...</p>
-                            <div class="article-item__rating">
-                                <img src="./images/icons/ic_star.svg" alt="">
-                                <span>4</span>
-                            </div>
-                        </div>
-                    </article>
-                    <article class="article-item">
-                        <img class="article-item__thumbnail" src="./images/drinks/drink_3.jpg" alt="fresh infused water">
-                        <div class="article-item__content">
-                            <h3 class="article-item__title"><a href="#">Fresh Infused Water</a></h3>
-                            <p class="article-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing
-                                elit. Aenean commodo ligula eget dolor...</p>
-                            <div class="article-item__rating">
-                                <img src="./images/icons/ic_star.svg" alt="">
-                                <span>4.5</span>
-                            </div>
-                        </div>
-                    </article>
-                </div>
-            </div>
-        </section>
-
-        <footer>
-            <p>Copyright &copy; 2021 - FoodHut</p>
-            <i class="fab fa-instagram"></i>
-        </footer>
+    <app-bar></app-bar>
+    <main id="main-content">
+      
     </main>
+    <app-footer></app-footer>
 </body>
 
 </html>
