add pwa features

--- a/src/scripts/views/components/app-bar/app-bar.html
+++ b/src/scripts/views/components/app-bar/app-bar.html
@@ -7,7 +7,7 @@
         <nav class="nav">
             <ul>
                 <li><a href="#" class="">Home</a></li>
-                <li><a href="#" class="">Favorite</a></li>
+                <li><a href="/#/favorites" class="">Favorite</a></li>
                 <li><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="">About Us</a></li>
             </ul>
         </nav>
@@ -17,8 +17,8 @@
 <nav class="drawer">
     <button class="close__button nav__drawer__btn " aria-label="close drawer button">X</button>
     <ul>
-        <li><a href="/" class="">Home</a></li>
-        <li><a href="#" class="">Favorite</a></li>
-        <li><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="">About Us</a></li>
+        <li class="nav-link"><a href="#" class="">Home</a></li>
+        <li class="nav-link"><a href="/#/favorites" class="">Favorite</a></li>
+        <li class="nav-link"><a href="https://www.linkedin.com/in/adrian-p-624b16136/" class="">About Us</a></li>
     </ul>
 </nav>
