--- a/src/scripts/views/components/article/article-card/article-card.html
+++ b/src/scripts/views/components/article/article-card/article-card.html
@@ -1,9 +1,9 @@
-<article class="article-item skeleton">
+<article class="article-item">
     <img class="article-item__thumbnail" src="../../../../../public/images/placeholders/placeholder-restaurant.png"
         alt="restaurant name">
     <div class="article-item__content">
         <div class="article-item__header"> 
-            <h3 class="article-item__title"><a href="#">Restaurant Name</a></h3>
+            <h3 class="article-item__title"><a href="#" class="article-item__name">Restaurant Name</a></h3>
             <div class="article-item__location">
                 <img src="../../../../../public/images/icons/ic_location.svg" alt="location icon">
                 <span class="article-item__city">Restaurant City</span>
