--- a/src/scripts/views/components/app-bar/app-bar.scss
+++ b/src/scripts/views/components/app-bar/app-bar.scss
@@ -20,13 +20,12 @@
 }
 
 .header {
-    position: absolute;
     width: 100%;
-    z-index: 100;
     transition: background 0.3s ease;
+    background-color: $secondary-color;
 
     .header__inner {
-        padding: 1rem 2rem;
+        padding: .5rem 2rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
