--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
+    <a href="#main-content" class="skip-link">Skip to Content</a>
     <app-bar></app-bar>
-    <main id="main-content">
+    <main id="main-content" tabindex="0">
       
     </main>
     <app-footer></app-footer>
