--- a/src/scripts/views/components/hero/hero.html
+++ b/src/scripts/views/components/hero/hero.html
@@ -1,7 +1,11 @@
 <div class="hero" bcd="asd">
     <div class="hero__banner">
         <div class="hero__image">
-            <img src="../../../../public/images/heros/hero-image_4.jpg" alt="banner">
+            <!-- <img src="../../../../public/images/heros/hero-image_4.jpg" alt="banner"> -->
+            <picture>
+                <source media="(min-width: 768px)" srcset="/images/heros/hero-image_4-large.jpg">
+                <img src="/images/heros/hero-image_4-large.jpg" alt="banner"></img>
+            </picture>
         </div>
         <div class="hero__inner">
             <h1 class="hero__title">We Are Here to Provide Information About Restaurants!</h1>
