--- a/src/scripts/views/pages/detail/detail.html
+++ b/src/scripts/views/pages/detail/detail.html
@@ -1,6 +1,6 @@
 <div class="container">
     <section class="restaurant-detail">
-        <img src="../../../../public/images/drinks/drink_1.jpg" alt="" class="restaurant-detail__image">
+        <img src="../../../../public/images/placeholders/placeholder-menu.png" alt="" class="restaurant-detail__image">
         <div class="restaurant-detail__content">
             <h1 class="restaurant-detail__name">Restaurant Name</h1>
             <div class="restaurant-detail__location">
