change bundler analyzer config

--- a/src/scripts/views/components/app-bar/app-bar.scss
+++ b/src/scripts/views/components/app-bar/app-bar.scss
@@ -67,6 +67,9 @@
         }
 
         .hamburger__button {
+            min-width: 44px;
+            min-height: 44px;
+            
             @include sm {
                 display: none;
             }
